[gd_scene load_steps=8 format=3 uid="uid://ly2lqh5cyg56"]

[ext_resource type="Script" path="res://Scenes/Scripts/storage.gd" id="1_5rs1h"]
[ext_resource type="PackedScene" uid="uid://jvem2bsy5c0" path="res://Scenes/Pieces/ui_backdrop.tscn" id="1_tqw84"]
[ext_resource type="PackedScene" uid="uid://dbkg2hwu1qssx" path="res://Scenes/Menu/equipment_storage.tscn" id="2_yyxmw"]
[ext_resource type="Texture2D" uid="uid://bwlwwxkp0cdhx" path="res://Sprites/partsIcon.png" id="3_ak3ge"]
[ext_resource type="PackedScene" uid="uid://c57gibcb3088r" path="res://Scenes/Menu/material_storage.tscn" id="3_rumbw"]
[ext_resource type="Theme" uid="uid://dgifmyw55byck" path="res://Themes/UIButton.tres" id="3_tak4v"]
[ext_resource type="Texture2D" uid="uid://bxqs1nfi114es" path="res://Sprites/equipmentIcon.png" id="4_0a0bh"]

[node name="Storage" type="Node2D"]
script = ExtResource("1_5rs1h")

[node name="UIbackdrop" parent="." instance=ExtResource("1_tqw84")]
layer_0/tile_data = PackedInt32Array(65538, 196608, 0, 65537, 196608, 0, 65536, 196608, 0, 65539, 196608, 0, 131075, 196608, 0, 196611, 196608, 0, 262147, 196608, 0, 262146, 196608, 0, 262145, 196608, 0, 262144, 196608, 0, 196608, 196608, 0, 131073, 196608, 0, 131074, 196608, 0, 196610, 196608, 0, 196609, 196608, 0, 131072, 196608, 0, 327680, 196608, 0, 327681, 196608, 0, 327682, 196608, 0, 327683, 196608, 0, 393219, 196608, 0, 393218, 196608, 0, 393217, 196608, 0, 393216, 196608, 0, 458755, 131072, 805306368, 458752, 131072, 1610612736, 458753, 196608, 0, 458754, 196608, 0, 0, 196608, 0, 3, 131072, 1342177280, 2, 196608, 0, 1, 196608, 0, 65534, 196608, 0, 65533, 131072, 0, 65535, 196608, 0, 131071, 196608, 0, 131070, 196608, 0, 131069, 196608, 0, 196605, 131072, 1610612736, 196606, 196608, 0, 196607, 196608, 0)

[node name="Material" type="Button" parent="."]
offset_left = 26.0
offset_top = 10.0
offset_right = 234.0
offset_bottom = 118.0
theme = ExtResource("3_tak4v")
icon = ExtResource("3_ak3ge")
expand_icon = true

[node name="Equipment" type="Button" parent="."]
offset_left = 256.0
offset_top = 10.0
offset_right = 464.0
offset_bottom = 118.0
theme = ExtResource("3_tak4v")
icon = ExtResource("4_0a0bh")
expand_icon = true

[node name="MaterialStorage" parent="." instance=ExtResource("3_rumbw")]
visible = false
position = Vector2(0, 10)

[node name="EquipmentStorage" parent="." instance=ExtResource("2_yyxmw")]
position = Vector2(0, 10)

[connection signal="button_down" from="Material" to="." method="_on_material_button_down"]
[connection signal="button_down" from="Equipment" to="." method="_on_equipment_button_down"]
[connection signal="use" from="MaterialStorage" to="." method="_on_material_storage_use"]
